2010-06-17	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* sapi/include/confdefs.h: Remove RTEMS_COVERAGE conditionals.

2010-06-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/include/rtems/score/object.h,
	score/include/rtems/score/thread.h: Remove prototypes for ITRON
	only methods removed by Ralf.

2010-06-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* itron/Makefile.am, itron/preinstall.am
	itron/include/itron.h, itron/include/itronsys/README
	itron/include/itronsys/eventflags.h,
	itron/include/itronsys/fmempool.h,
	itron/include/itronsys/intr.h,
	itron/include/itronsys/mbox.h,
	itron/include/itronsys/msgbuffer.h,
	itron/include/itronsys/network.h,
	itron/include/itronsys/port.h,
	itron/include/itronsys/semaphore.h,
	itron/include/itronsys/status.h,
	itron/include/itronsys/sysmgmt.h,
	itron/include/itronsys/task.h,
	itron/include/itronsys/time.h,
	itron/include/itronsys/types.h,
	itron/include/itronsys/vmempool.h,
	itron/include/rtems/itron/README,
	itron/include/rtems/itron/config.h,
	itron/include/rtems/itron/eventflags.h,
	itron/include/rtems/itron/fmempool.h,
	itron/include/rtems/itron/intr.h,
	itron/include/rtems/itron/itronapi.h,
	itron/include/rtems/itron/mbox.h,
	itron/include/rtems/itron/msgbuffer.h,
	itron/include/rtems/itron/network.h,
	itron/include/rtems/itron/object.h,
	itron/include/rtems/itron/port.h,
	itron/include/rtems/itron/semaphore.h,
	itron/include/rtems/itron/sysmgmt.h,
	itron/include/rtems/itron/task.h,
	itron/include/rtems/itron/time.h,
	itron/include/rtems/itron/vmempool.h,
	itron/inline/rtems/itron/eventflags.inl,
	itron/inline/rtems/itron/fmempool.inl,
	itron/inline/rtems/itron/intr.inl,
	itron/inline/rtems/itron/mbox.inl,
	itron/inline/rtems/itron/msgbuffer.inl,
	itron/inline/rtems/itron/network.inl,
	itron/inline/rtems/itron/port.inl,
	itron/inline/rtems/itron/semaphore.inl,
	itron/inline/rtems/itron/sysmgmt.inl,
	itron/inline/rtems/itron/task.inl,
	itron/inline/rtems/itron/time.inl,
	itron/inline/rtems/itron/vmempool.inl,